--- a/helm/app/Chart.yaml
+++ b/helm/app/Chart.yaml
@@ -1,6 +1,16 @@
 apiVersion: v2
-name: eureka
+name: eureka-app
 description: A Helm chart for Kubernetes
+
+dependencies:
+  # - alias: eureka-server
+  #   name: eureka-app
+  - name: eureka-server
+    version: "0.1.0"
+    repository: file://../server
+  - name: eureka-client
+    version: "0.1.0"
+    repository: file://../client
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -21,4 +31,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.0.0"
+appVersion: "1.16.0"
