--- a/helm/server/templates/server-service.yaml
+++ b/helm/server/templates/server-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.server.service.name }}
+  name: {{ .Values.service.name }}
   labels:
     {{- include "helm.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.server.service.type }}
+  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.server.service.port }}
+    - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
