--- a/helm/server/templates/properties-configmap.yaml
+++ b/helm/server/templates/properties-configmap.yaml
@@ -5,7 +5,7 @@ data:
       port: 8761
     spring:
       application:
-        name: eureka
+        name: eureka-server
       config:
         import: optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888/}
     eureka:
