--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -1,4 +1,4 @@
-name: eureka
+name: eureka-server
 
 on:
   push:
@@ -11,6 +11,20 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
+    container:
+      image: gradle:8.8.0-jdk17
+    
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Run tests
+        run: ./gradlew clean test -info
+
+  cd:
+    name: CD
+    runs-on: ubuntu-latest
+    needs: ci
 
     env:
       REGISTRY: ghcr.io
