--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -70,6 +70,6 @@ jobs:
       - run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add helm/values.yaml
+          git add helm/server/values.yaml
           git commit -m "update version ${{ steps.meta.outputs.version }}"
           git push
