trigger on branch

--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -2,10 +2,11 @@ name: eureka-server
 
 on:
   push:
-    # branches:
-    #   - "develop"
-    tags:
-      - "server-v*"
+    branches:
+      - "develop"
+    # tags:
+    #   - "server-v*"
+
 
 jobs:
   ci:
@@ -36,6 +37,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Docker meta
         id: meta
