--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -9,6 +9,16 @@ on:
 
 
 jobs:
+  tag_job:
+    runs-on: ubuntu-latest
+
+    outputs:
+      current_tag: ${{ steps.get_tag.outputs.current_tag }}
+
+    steps:
+      - id: get_tag
+        run: echo "current_tag=$(git tag -l --contains ${GITHUB_SHA} | head -n1)" >> "$GITHUB_OUTPUT"
+
   ci:
     name: CI
     runs-on: ubuntu-latest
@@ -25,7 +35,11 @@ jobs:
   cd:
     name: CD
     runs-on: ubuntu-latest
-    needs: ci
+    needs:
+      - ci
+      - tag_job
+
+    if: ${{ startsWith(needs.tag_job.outputs.current_tag, 'server-v') }}
 
     env:
       REGISTRY: ghcr.io
