--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -15,6 +15,9 @@ jobs:
       current_tag: ${{ steps.get_tag.outputs.current_tag }}
 
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
       - id: get_tag
         run: echo "current_tag=$(git tag -l --contains ${GITHUB_SHA} | head -n1)" >> "$GITHUB_OUTPUT"
 
@@ -38,7 +41,7 @@ jobs:
       - ci
       - tag_job
 
-    if: ${{ startsWith(needs.tag_job.outputs.current_tag, 'server-v') }}
+    if: ${{ startsWith(needs.tag_job.outputs.current_tag, 'client-v') }}
 
     env:
       REGISTRY: ghcr.io
