--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -2,25 +2,12 @@ name: eureka-client
 
 on:
   push:
-    branches:
-      - "develop"
-    # tags:
-    #   - "client-v*"
+    # branches:
+    #   - "develop"
+    tags:
+      - "client-v*"
 
 jobs:
-  tag_job:
-    runs-on: ubuntu-latest
-
-    outputs:
-      current_tag: ${{ steps.get_tag.outputs.current_tag }}
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - id: get_tag
-        run: echo "current_tag=$(git tag -l --contains ${GITHUB_SHA} | head -n1)" >> "$GITHUB_OUTPUT"
-
   ci:
     name: CI
     runs-on: ubuntu-latest
@@ -39,9 +26,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - ci
-      - tag_job
-
-    if: ${{ startsWith(needs.tag_job.outputs.current_tag, 'client-v') }}
 
     env:
       REGISTRY: ghcr.io
