--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -2,26 +2,13 @@ name: eureka-server
 
 on:
   push:
-    branches:
-      - "develop"
-    # tags:
-    #   - "server-v*"
+    # branches:
+    #   - "develop"
+    tags:
+      - "server-v*"
 
 
 jobs:
-  tag_job:
-    runs-on: ubuntu-latest
-
-    outputs:
-      current_tag: ${{ steps.get_tag.outputs.current_tag }}
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-        
-      - id: get_tag
-        run: echo "current_tag=$(git tag -l --contains ${GITHUB_SHA} | head -n1)" >> "$GITHUB_OUTPUT"
-
   ci:
     name: CI
     runs-on: ubuntu-latest
@@ -40,9 +27,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - ci
-      - tag_job
-
-    if: ${{ startsWith(needs.tag_job.outputs.current_tag, 'server-v') }}
 
     env:
       REGISTRY: ghcr.io
@@ -54,8 +38,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Docker meta
         id: meta
@@ -82,14 +64,3 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-    
-      # - uses: mikefarah/yq@v4.43.1
-      #   with:
-      #     cmd: yq -i '.image.tag="${{ steps.meta.outputs.version }}"' helm/server/values.yaml
-      
-      # - run: |
-      #     git config user.name "${GITHUB_ACTOR}"
-      #     git config user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add helm/server/values.yaml
-      #     git commit -m "update version ${{ steps.meta.outputs.version }}"
-      #     git push
